k8s/deploy-cluster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oq-cluster
  namespace: default
  labels:
    app: cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cluster
  template:
    metadata:
      labels:
        app: cluster
        version: "latest"
    spec:
      containers:
      - name: master
        image: openquake/engine:nightly
        imagePullPolicy: Always
        ports:
        - containerPort: 8800
        command: ["/bin/sh", "-c"] 
        args: 
          - echo "workerIP $OQ_WORKER_IP"  > /home/openquake/avvio.log;
            sed -i 's,127.0.0.1,'"$OQ_MASTER_IP"',' /opt/openquake/openquake.cfg;
            cp -a /opt/openquake /oqshared;
            /oqshared/openquake/bin/python3 -m  openquake.commands dbserver start;
            sleep 3600;
        volumeMounts:
        - mountPath: /oqshared  # in the container filesystem
          name: kinddata        #name as defined in volumes

      - name: worker
        image: openquake/engine:nightly
        imagePullPolicy: Always
        ports:
        - containerPort: 1909
        command: ["/bin/sh", "-c"] 
        args: 
          - echo startworker > /home/openquake/avvio.log;
            /oqshared/openquake/bin/python3 -m openquake.baselib.workerpool;
        volumeMounts:
        - mountPath: /oqshared  # in the container filesystem
          name: kinddata        #name as defined in volumes
#

      volumes:
        - name: kinddata # name of volume
          hostPath:
            path: /data #  matches kind containerPath:
