k8s/deploy-engine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: master
  labels:
    app: master 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: master
  template:
    metadata:
      labels:
        app: master
    spec:
      securityContext: 
        runAsUser: 1000 
        runAsGroup: 1000 
        fsGroup: 1000 
      containers:
      - name: master
        image: openquake/engine:nightly
        imagePullPolicy: Always 
        #resources: 
        #  limits: 
        #   memory: "8Gi" 
        #   cpu: "8" 
        #  requests: 
        #    memory: "24Gi" 
        #    cpu: "6" 
        volumeMounts:
        - mountPath: "/opt/openquake"
          name: azure
          readOnly: false 
      volumes: 
        - name: azure 
          persistentVolumeClaim: 
            claimName: nfsdata
      tolerations:
      - key: "kubernetes.azure.com/scalesetpriority"
        operator: "Equal"
        value: "spot"
        effect: "NoSchedule"
