k8s/deploy-master.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: master
  namespace: default
  labels:
    app: engine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: engine
  template:
    metadata:
      labels:
        app: engine
        version: "latest"
    spec:
      containers:
      - name: engine-master
        image: openquake/engine:nightly
        imagePullPolicy: Always
        ports:
        - name: webui
          containerPort: 8800
        command: ["/bin/sh", "-c"] 
        args: 
          - cp -a /opt/openquake /oqshared;
            /bin/sed 's,127.0.0.1,'"$OQ_MASTER_IP"',' /mnt/openquake/openquake.cfg | /usr/bin/tee $OQ_CONFIG_FILE;
            oq dbserver start;
            exec oq webui start 0.0.0.0:8800 -s; 
            sleep 720;
        volumeMounts:
        - mountPath: /mnt/openquake
          name: config
        - mountPath: /oqshared  # in the container filesystem
          name: data        #name as defined in volumes
      volumes:
        - name: data #name of volume
          persistentVolumeClaim:
            claimName: datacalc
        - name: config
          configMap:
            name: oqcfg
