k8s/deploy-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostpath-worker
  namespace: default
  labels:
    app: engine-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: engine-workers
  template:
    metadata:
      labels:
        app: engine-workers
        version: "latest"
    spec:
      containers:
      - name: engine-worker
        image: openquake/engine:nightly
        imagePullPolicy: Always
        ports: # need for svc
        - containerPort: 1909
        command: ["/bin/sh", "-c"] 
        args: 
          - oq --version;
            which python3;
            python3 -m openquake.baselib.workerpool;
            sleep 720;
        volumeMounts:
        - mountPath: /oqdata  # in the container filesystem
          name: kinddata        #name as defined in volumes
      volumes:
        - name: kinddata # name of volume
          hostPath:
            path: /data #  matches kind containerPath:
