k8s/engine-svc.yaml
#NodePort with Port Mappings
#https://kind.sigs.k8s.io/docs/user/configuration/#networking
kind: Service
apiVersion: v1
metadata:
  namespace: openquake
  name: engine-service
  labels:
    app: oqmaster
spec:
  type: ClusterIP 
  clusterIP: None
  ports:
  - name: webui
    protocol: TCP
    port: 8800 #must same of containerPort
  selector:
    app: oqmaster
