k8s/svc-webui.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-webui
  labels:
    run: svc-webui
spec:
  ports:
  - name: engine-webui
    port: 8800
    protocol: TCP
  selector:
    app: master-engine
