k8s/svc-workers.yaml
apiVersion: v1
kind: Service
metadata:
  name: engine-workers
  labels:
    run: engine-workers
spec:
  ports:
  - port: 1909
    protocol: TCP
  selector:
    app: workers
