k8s/ingress-webui.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: webui-in
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 128m
spec:
  rules:
  - http:
      paths: 
      - backend:
          service: 
            name: svc-webui
            port: 
              number: 8800
        path: /
        pathType: Prefix
